// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-copy-to-clipboard States 1`] = `
<div>
  <div>
    <div
      class="m-copy-to-clipboard"
    >
      <div
        class="m-input-style m-textfield m--is-readonly m--has-value m--is-tag-default m--is-type-text"
        style="width: 100%;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  placeholder="Disabled"
                  readonly="readonly"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-copy-to-clipboard"
    >
      <div
        class="m-input-style m-textfield m--is-readonly m--has-value m--is-tag-default m--is-type-text"
        style="width: 100%;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  placeholder="Read-only"
                  readonly="readonly"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <!---->
              </div>
            </div>
          </div>
           
          <div
            class="m-input-style__append"
          >
            <button
              class="m-copy-to-clipboard__button"
            >
              Copier
            </button>
          </div>
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="m-copy-to-clipboard"
    >
      <div
        class="m-input-style m-textfield m--is-waiting m--has-value m--is-tag-default m--is-type-text"
        style="width: 100%;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <input
                  aria-describedby="fakeId"
                  class="m-textfield__input"
                  id="mTextfield-fakeId"
                  maxlength="Infinity"
                  placeholder="Waiting"
                  readonly="readonly"
                  type="text"
                />
                   
                <!---->
                 
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <!---->
                  
                <div
                  class="m-spinner m-input-style__spinner"
                >
                  <!---->
                   
                  <div />
                </div>
              </div>
            </div>
          </div>
           
          <!---->
        </div>
          
        <div
          class="m-input-style__validation"
        >
          <div
            class="m-textfield__validation"
            id="fakeId"
          >
            <div
              class="m-validation-message m-textfield__validation-message"
            >
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-copy-to-clipboard custom 1`] = `
<div>
  <div
    class="m-copy-to-clipboard"
  >
    <div
      class="m-input-style m-textfield m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default m--is-type-text"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTextfield-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                some label
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                class="m-textfield__input"
                id="mTextfield-fakeId"
                maxlength="Infinity"
                readonly="readonly"
                type="text"
              />
                 
              <!---->
               
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
                
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <div
        class="m-input-style__validation"
      >
        <div
          class="m-textfield__validation"
          id="fakeId"
        >
          <div
            class="m-validation-message m-textfield__validation-message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <button>
      Some button
    </button>
  </div>
   
  <div
    class="m-copy-to-clipboard"
  >
    <div
      class="m-input-style m-textfield m--is-readonly m--has-value m--is-tag-default m--is-type-text"
      style="width: 100%;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                class="m-textfield__input"
                id="mTextfield-fakeId"
                maxlength="Infinity"
                readonly="readonly"
                type="text"
              />
                 
              <!---->
               
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <!---->
                
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="m-input-style__append"
        >
          <button>
            Some button
          </button>
        </div>
      </div>
        
      <div
        class="m-input-style__validation"
      >
        <div
          class="m-textfield__validation"
          id="fakeId"
        >
          <div
            class="m-validation-message m-textfield__validation-message"
          >
            <!---->
             
            <!---->
          </div>
           
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-copy-to-clipboard custom user feedback 1`] = `
<div
  class="m-copy-to-clipboard"
>
  <div
    class="m-input-style m-textfield m--is-readonly m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              readonly="readonly"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          class="m-copy-to-clipboard__button"
        >
          Copier
        </button>
      </div>
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-copy-to-clipboard default 1`] = `
<div
  class="m-copy-to-clipboard"
>
  <div
    class="m-input-style m-textfield m--is-readonly m--is-tag-default m--is-type-text"
    style="width: 100%;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              readonly="readonly"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          class="m-copy-to-clipboard__button"
        >
          Copier
        </button>
      </div>
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-copy-to-clipboard default with value 1`] = `
<div
  class="m-copy-to-clipboard"
>
  <div
    class="m-input-style m-textfield m--is-readonly m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              readonly="readonly"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          class="m-copy-to-clipboard__button"
        >
          Copier
        </button>
      </div>
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-copy-to-clipboard user feedback 1`] = `
<div
  class="m-copy-to-clipboard"
>
  <div
    class="m-input-style m-textfield m--is-readonly m--has-value m--is-tag-default m--is-type-text"
    style="width: 100%;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-describedby="fakeId"
              class="m-textfield__input"
              id="mTextfield-fakeId"
              maxlength="Infinity"
              readonly="readonly"
              type="text"
            />
               
            <!---->
             
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <!---->
              
            <!---->
          </div>
        </div>
      </div>
       
      <div
        class="m-input-style__append"
      >
        <button
          class="m-copy-to-clipboard__button"
        >
          Copier
        </button>
      </div>
    </div>
      
    <div
      class="m-input-style__validation"
    >
      <div
        class="m-textfield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-textfield__validation-message"
        >
          <!---->
           
          <!---->
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;
